# agentegrity-framework

./: .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  SECURITY.md  STATUS.md  agentegrity-glossary.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  release.yml
assets/: README.md
clients/typescript/: README.md  bunfig.toml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
clients/typescript/examples/: basic.ts
clients/typescript/scripts/: check-coverage.ts  check-versions.ts
clients/typescript/src/: index.ts  reporter.ts  types.ts
clients/typescript/test/: cross-package-conformance.test.ts
docs/: quickstart.md
examples/: basic_evaluation.py  claude_adapter.py  claude_adapter_advanced.py  crewai_adapter.py  custom_validator.py  google_adk_adapter.py  langchain_adapter.py  openai_agents_adapter.py  runtime_monitoring.py
examples/exporter_receiver/: README.md  app.py  requirements.txt  test_app.py
schemas/: openapi.yaml
schemas/exporter/: common.json  event.json  session_end.json  session_start.json
scripts/: check_versions.py  fetch_benchmark_datasets.sh  run_benchmarks.py
spec/: SPECIFICATION.md  adapter-quick-reference.md  threat-model.md
spec/layers/: adversarial-layer.md  cortical-layer.md  governance-layer.md  recovery-layer.md
spec/properties/: adversarial-coherence.md  environmental-portability.md  verifiable-assurance.md
src/agentegrity/: __init__.py  __main__.py  bedrock_agents.py  claude.py  crewai.py  google_adk.py  langchain.py  openai_agents.py
src/agentegrity/adapters/: __init__.py  autogen.py  base.py  bedrock_agents.py  claude.py  crewai.py  google_adk.py  langchain.py  openai_agents.py
src/agentegrity/core/: __init__.py  attestation.py  evaluator.py  monitor.py  profile.py
src/agentegrity/layers/: __init__.py  adversarial.py  adversarial_llm.py  baseline_store.py  checkpoint.py  cortical.py  cortical_llm.py  embedding_similarity.py  governance.py  kms_checkpoint.py  recovery.py
src/agentegrity/properties/: __init__.py
src/agentegrity/sdk/: __init__.py  client.py
src/agentegrity/validators/: __init__.py
tests/: test_adapter_bedrock_agents.py  test_adapter_claude.py  test_adapter_conformance.py  test_adapter_crewai.py  test_adapter_google_adk.py  test_adapter_langchain.py  test_adapter_openai_agents.py  test_adversarial_detectors.py  test_adversarial_llm.py  test_async_evaluator.py  test_attestation.py  test_baseline_store.py  test_bedrock_agents_module.py  test_benchmarks.py  test_checkpoint.py  test_claude_module.py  test_cortical_baseline_persistence.py  test_cortical_llm.py  test_cortical_llm_layer.py  test_crewai_module.py  test_drift.py  test_embedding_similarity.py  test_evaluator.py  test_exporter_hook.py  test_google_adk_module.py  test_kms_checkpoint.py  test_langchain_module.py  test_monitor.py  test_openai_agents_module.py  test_perf_budget.py  test_profile.py  test_recovery.py  test_recovery_restore.py  test_schemas.py  test_sdk_client.py
tests/benchmarks/: __init__.py  fixtures.py  harness.py
tests/benchmarks/data/: .gitignore
tests/benchmarks/loaders/: __init__.py  agentdojo.py  injecagent.py  pint.py
