[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentegrity"
version = "0.6.0"
description = "The open standard for AI agent integrity. Evaluate, enforce, and prove that autonomous agents are adversarially coherent, environmentally portable, and verifiably assured."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Cogensec Research" },
]
keywords = [
    "ai-security",
    "ai-agents",
    "agent-integrity",
    "agentegrity",
    "autonomous-agents",
    "adversarial-ai",
    "runtime-security",
    "ai-governance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
claude = ["claude-agent-sdk>=0.1.0"]
langchain = ["langchain-core>=0.3.0"]
openai-agents = ["openai-agents>=0.1.0"]
crewai = ["crewai>=0.70.0"]
google-adk = ["google-adk>=0.3.0"]
autogen = [
    "autogen-agentchat>=0.7.0",
    "autogen-core>=0.7.0",
    "opentelemetry-sdk>=1.20",
]
agno = ["agno>=2.0"]
bedrock-agents = [
    "boto3>=1.34",
    "strands-agents>=1.0",
]
llm = ["anthropic>=0.40.0"]
stats = ["scipy>=1.10"]
kms = ["boto3>=1.34"]
all = [
    "agentegrity[crypto,claude,langchain,openai-agents,crewai,google-adk,autogen,agno,bedrock-agents,llm,stats,kms]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/cogensec/agentegrity-framework"
Documentation = "https://github.com/cogensec/agentegrity-framework/tree/main/spec"
Repository = "https://github.com/cogensec/agentegrity-framework"
Issues = "https://github.com/cogensec/agentegrity-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentegrity"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/agentegrity",
    "tests",
    "examples",
    "spec",
    "schemas",
    "README.md",
    "LICENSE",
    "MANIFESTO.md",
    "agentegrity-glossary.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

# Optional dependencies — they live behind extras (`[llm]`, `[stats]`,
# `[kms]`) so the modules importing them MUST type-check whether or
# not the runtime is installed. `ignore_missing_imports = true` here
# suppresses both `import-not-found` (when the package is absent in
# CI's `pip install -e .[dev,crypto]` step) and `import-untyped`
# (when the package is present but ships no stubs / no `py.typed`).
# Without this block the strict CI step fails with import-not-found
# the moment we add a feature module that gates on an optional dep.
[[tool.mypy.overrides]]
module = [
    "anthropic", "anthropic.*",
    "boto3", "boto3.*", "botocore.*",
    "scipy", "scipy.*",
    "langchain_core", "langchain_core.*",
    "agents", "agents.*",
    "claude_agent_sdk", "claude_agent_sdk.*",
    "crewai", "crewai.*",
    "google.adk", "google.adk.*",
    "autogen_agentchat", "autogen_agentchat.*",
    "autogen_core", "autogen_core.*",
    "opentelemetry.*",
    "agno", "agno.*",
    "strands", "strands.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: detection benchmark suite (run with `pytest -m benchmark`); excluded from the default unit-test run via the addopts filter below.",
]
# Benchmarks are excluded from the default `pytest` invocation so unit
# tests stay fast. Run them explicitly with `pytest -m benchmark`.
addopts = "-m 'not benchmark'"

[tool.coverage.run]
branch = true
source = ["agentegrity"]
omit = [
    # CLI entrypoint — exercised manually via `python -m agentegrity` /
    # `python -m agentegrity doctor`. Smoke-testing it via subprocess
    # would inflate test runtime without buying real assurance; it has
    # its own end-to-end manual verification path.
    "src/agentegrity/__main__.py",
]

[tool.coverage.report]
# Floor calibrated against the current measured surface (Phase
# 2-finisher: total 85% line+branch with __main__ omitted = 87%). Set
# at 85% to leave headroom for one stray uncovered branch on a
# future PR; raise to 90 in v0.7 once we close the adapter coverage
# gap (Crew/Google/LangChain framework-specific code paths require
# the framework installed to exercise).
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
